Add basic button table

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <html lang="en">
 <head>
   <title>Calculator</title>
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
 
 <body>
@@ -14,11 +13,34 @@
       </div>
       <div id = 'buttons'>\
           <table>
-              <tr></tr>
-              <tr></tr>
-              <tr></tr>
-              <tr></tr>
-              <tr></tr>
+              <tr>
+                <td> AC </td>
+                <td> % </td>
+                <td> / </td>
+                <td> * </td>
+              </tr>
+              <tr>
+                <td> 7 </td>
+                <td> 8 </td>
+                <td> 9 </td>
+                <td rowspan="2"> - </td>
+              </tr>
+              <tr>
+                <td> 4 </td>
+                <td> 5 </td>
+                <td> 6 </td>
+              </tr>
+              <tr>
+                <td> 1 </td>
+                <td> 2 </td>
+                <td> 3 </td>
+                <td rowspan="2"> + </td>
+              </tr>
+              <tr>
+                <td> 0 </td>
+                <td> . </td>
+                <td> = </td>
+              </tr>
             </table>
       </div>
   </div>
