--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 </head>
 
 <body>
-  <div id='calculator'>
-      <div id = 'title'>
-      </div>
+  <table id = 'calculator'>
+      <thead id = 'title'>
+        <tr>
+          <th colspan="4">Sylvia's Calculator</th>
+        </tr>
+      </thead>
       <div id = 'screen'>
+        <tr>
+          <td colspan="4"> Come back to me </td>
+        </tr>
       </div>
-      <div id = 'buttons'>\
-          <table>
+      <tbody id = 'buttons'>
               <tr>
                 <td> AC </td>
                 <td> % </td>
@@ -41,8 +46,8 @@
                 <td> . </td>
                 <td> = </td>
               </tr>
-            </table>
-      </div>
+      </tbody>
+      </table>
   </div>
 </body>
 </html>
