Establish CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+<link href="styles/main.css" type="text/css" rel="stylesheet">
 <head>
   <title>Calculator</title>
 </head>
