Add basic css styling

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
 
 <body>
   <table id = 'calculator'>
-      <thead id = 'title'>
+      <thead>
         <tr>
           <th colspan="4">Sylvia's Calculator</th>
         </tr>
       </thead>
-      <div id = 'screen'>
         <tr>
-          <td colspan="4"> Come back to me </td>
+          <td id = 'screen' colspan="4"> Come back to me </td>
         </tr>
-      </div>
       <tbody id = 'buttons'>
               <tr>
                 <td> AC </td>
