Add js file to project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 
 <html lang="en">
-<link href="styles/main.css" type="text/css" rel="stylesheet">
 <head>
   <title>Calculator</title>
+  <link href="styles/main.css" type="text/css" rel="stylesheet">
+  <script src="calculator.js"></script>
 </head>
 
 <body>
