Refactor css framework

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <button>=</button>
         <button>+</button>
       </div>
-      <div class = button-clear>
-        <button>Clear</button>
+      <div>
+        <button class = 'button-clear'>Clear</button>
       </div>
   </div>
 </body>
