--- a/index.html
+++ b/index.html
@@ -13,37 +13,39 @@
       <h2>Sylvia's Calculator</h2>
     </div>
     <div id = 'screen'> 
-      <p>
-        Come back to me
-      </p>
+     <p>
+     <input type = "text"
+            id = "screen"
+            value = "text" />
+        </p>
     </div>
     <div id = 'buttons'>
       <div class = button-row>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>/</button>
+        <button onclick="buttonEval(7)">7</button>
+        <button onclick="buttonEval(8)">8</button>
+        <button onclick="buttonEval(9)">9</button>
+        <button onclick="buttonEval(/)">/</button>
       </div>
       <div class = button-row>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>*</button>
+        <button onclick="buttonEval(4)">4</button>
+        <button onclick="buttonEval(5)">5</button>
+        <button onclick="buttonEval(6)">6</button>
+        <button onclick="buttonEval(*)">*</button>
       </div>
       <div class = button-row>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>-</button>
+        <button onclick="buttonEval(1)">1</button>
+        <button onclick="buttonEval(2)">2</button>
+        <button onclick="buttonEval(3)">3</button>
+        <button onclick="buttonEval(-)">-</button>
       </div>
       <div class = button-row>
-        <button>0</button>
-        <button>.</button>
-        <button>=</button>
-        <button>+</button>
+        <button onclick="buttonEval(0)">0</button>
+        <button onclick="buttonEval(.)">.</button>
+        <button onclick="buttonEval(=)">=</button>
+        <button onclick="buttonEval(+)">+</button>
       </div>
       <div>
-        <button class = 'button-clear'>Clear</button>
+        <button class = 'button-clear' onclick="buttonEval("Clear")">Clear</button>
       </div>
   </div>
 </body>
