--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
         <button onclick="buttonEval(7)">7</button>
         <button onclick="buttonEval(8)">8</button>
         <button onclick="buttonEval(9)">9</button>
-        <button onclick="buttonEval(/)">/</button>
+        <button onclick="buttonEval('/')">/</button>
       </div>
       <div class = button-row>
         <button onclick="buttonEval(4)">4</button>
         <button onclick="buttonEval(5)">5</button>
         <button onclick="buttonEval(6)">6</button>
-        <button onclick="buttonEval(*)">*</button>
+        <button onclick="buttonEval('*')">*</button>
       </div>
       <div class = button-row>
         <button onclick="buttonEval(1)">1</button>
         <button onclick="buttonEval(2)">2</button>
         <button onclick="buttonEval(3)">3</button>
-        <button onclick="buttonEval(-)">-</button>
+        <button onclick="buttonEval('-')">-</button>
       </div>
       <div class = button-row>
         <button onclick="buttonEval(0)">0</button>
-        <button onclick="buttonEval(.)">.</button>
-        <button onclick="buttonEval(=)">=</button>
-        <button onclick="buttonEval(+)">+</button>
+        <button onclick="buttonEval('.')">.</button>
+        <button onclick="buttonEval('=')">=</button>
+        <button onclick="buttonEval('+')">+</button>
       </div>
       <div>
-        <button class = 'button-clear' onclick="buttonEval("Clear")">Clear</button>
+        <button class = 'button-clear', onclick="buttonEval('clear')">Clear</button>
       </div>
   </div>
 </body>
