Add raw first draft - one function

--- a/index.html
+++ b/index.html
@@ -4,21 +4,15 @@
 <head>
   <title>Calculator</title>
   <link href="styles/main.css" type="text/css" rel="stylesheet">
-  <script src="calculator.js"></script>
+  <script type="text/javascript" src="calculator.js"></script>
 </head>
 
 <body>
   <div id = 'calculator'>
     <div id="title">
       <h2>Sylvia's Calculator</h2>
-    </div>
-    <div id = 'screen'> 
-     <p>
-     <input type = "text"
-            id = "screen"
-            value = "text" />
-        </p>
-    </div>
+    </div> 
+  <p id= "display">Change me!</p>
     <div id = 'buttons'>
       <div class = button-row>
         <button onclick="buttonEval(7)">7</button>
