Add more styling elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="title">
       <h2>Sylvia's Calculator</h2>
     </div> 
-  <p id= "display">Change me!</p>
+  <p id= "display"></p>
     <div id = 'buttons'>
       <div class = button-row>
         <button onclick="buttonEval(7)">7</button>
